[components] fix icon alignment issues in menu items (#1526)

--- a/packages/@sanity/components/src/menus/styles/DefaultMenu.css
+++ b/packages/@sanity/components/src/menus/styles/DefaultMenu.css
@@ -38,11 +38,14 @@
 }
 
 .iconContainer {
+  display: flex;
+  align-items: center;
   margin-right: 0.5em;
 }
 
 .link {
-  display: block;
+  display: flex;
+  align-items: center;
   position: relative;
   line-height: 3em;
   padding: 0 1em;
